Custmising gallery and photo entity, Added property called amountofiphotos and photocover image to link photo object with gallery

--- a/app/Resources/views/Subpages/regulations.html.twig
+++ b/app/Resources/views/Subpages/regulations.html.twig
@@ -7,66 +7,14 @@
 {% block content %}
     <div class="header-title border_animation">Regulamin uczestnika Rzeszowskiego Klubu Karate Kyokushin <span class="head-line"></div>
     <article class="col-xs-12 regulamin">
-        <ol>
-            <li><strong>Zasady ogólne przystąpienia do klubu.</strong>
-                <ul class="indent-list-items">
-                    <li>należy przestrzegać zasad BHP sali gimnastycznej oraz wszystkich poleceń instruktora
-                        prowadzącego zajęcia (Sensei/Senpai),</li>
-                    <li>przed przystąpieniem do udziału w treningach należy wypełnić i podpisać deklarację
-                        członkowską oraz posiadać zgodę rodziców (dotyczy osób niepełnoletnich) oraz zgodę lekarza
-                        do uczestniczenia w zajęciach sportowych.</li>
-                    <li>w przypadku zatajenia przed lekarzem dopuszczającym do treningu karate, chorób mających
-                        wpływ na bezpieczeństwo ćwiczącego w razie wypadku winę ponosi uczestnik (w przypadku
-                        niepełnoletnich rodzice)</li>
-                    <li>dzieci od klas zerowych do 12 roku życia uczestniczą w zajęciach
-                        ogólnorozwojowych z elementami karate.</li>
-                    <li>młodzież od 12 roku życia i osoby dorosłe uczestniczą w treningach w pełno wymiarowym
-                        programie szkoleniowym karate.</li>
-                    <li>na zajęcia przychodzimy punktualnie w czystym Gi (kimonie) lub stroju sportowym.</li>
-                    <li>zajęcia nie odbywają się w dniach wolnych ustawowo od pracy (świątecznych).</li>
-                </ul>
-            </li>
-            <li><strong>Zasady opłacania składek członkowskich.</strong>
-                <ul class="indent-list-items">
-                    <li>składkę członkowską wpłacamy do każdego 10-tego danego miesiąca, w przypadku innego terminu potrzebna jest zgoda instruktora prowadzącego.</li>
-                    <li>miesięczna składka w Rzeszowie wynosi <strong>70 zł</strong></li>
-                    <li>miesięczna składka w Zaczerniu wynosi <strong>50 zł</strong></li>
-                    <li>w przypadku gdy w treningach karate uczestniczy więcej niż jedna osoba z rodziny pierwsza
-                        osoba płaci 70 zł a pozostałe po 35 zł.</li>
-                    <li>w przypadku jednorazowego lub niesystematycznego chodzenia na treningi, składka za
-                        każdy trening wynosi <strong>15 zł.</strong></li>
-                    <li>jeżeli w danym miesiącu uczestnik był nieobecny na zajęciach za wiedzą instruktorów klubu,
-                        zostaje on zwolniony z opłacenia składki członkowskiej w danym miesiącu.</li>
-                    <li>zwolnienie z opłat przysługuje członkom honorowym, instruktorom i osobom posiadającym
-                        1 dan.</li>
-                    <li>rezygnacja z członkostwa w każdym przypadku wymaga powiadomienia i nie uprawnia do zwrotu wniesionych wpłat.
-                    </li>
-                </ul>
-            </li>
-            <li><strong>Przed przystąpieniem do egzaminów na stopnie kyu</strong> uczestnik zobowiązany jest do uregulowania wszystkich opłat za zajęcia karate , oraz dokonania wpłaty za egzamin najpóźniej na przedostatnim treningu przed planowanym egzaminem.</li>
-            <li><strong>Członek klubu ma prawo</strong> uczestniczyć w treningach, brać  udział obozach sportowo -
-                szkoleniowych, seminariach doszkoleniowych, przystępować do egzaminów na stopnie kyu oraz  stopnie mistrzowskie dan. Brać udział w kursach instruktorskich i trenerskich, reprezentować klub na
-                zawodach sportowych, pokazach karate oraz innych imprezach organizowanych przez klub.</li>
-            <li>Za zajęcie I miejsca na Mistrzostwach Polski uczestnik klubu na <strong>okres jednego roku</strong> jest członkiem honorowym klubu i nie płaci składki członkowskiej.</li>
-            <li>Za zajęcie II oraz III miejsca na Mistrzostwach Polski status członka honorowego wynosi <strong>6 miesięcy.</strong></li>
-            <li>Wszystkie zmiany i informacje są dostępne na stronie Rzeszowskiego Klubu Karate <strong><a href="http:\\www.kyokushin-rzeszow.pl." alt="Strona klubu">kyokushin-rzeszow.pl.</a></strong></li>
-            <li>Wszelkie pytania lub wątpliwości proszę pytać przed lub po treningach, prowadzących zajęcia
-                instruktorów lub pod telefonami:
-                <ul class="indent-list-items-square">
-                    <li><strong>prezes klubu sensei</strong> Marian Sokół tel. 692 422 501,</li>
-                    <li><strong>sensei Joanna Zachara</strong> tel. 503 490 139,</li>
-                    <li><strong>sensei Grzegorz Sokół</strong> tel. 511 946 980.</li>
-                </ul>
-            </li>
-            <li>Klub zastrzega sobie możliwość zmiany w/w regulaminu.
-                Październik 2013</li>
-        </ol>
-        <span class="head-line"></span>
+
+        <h3>Nowy regulamin będzie dostępny już wkrótce</h3>
+
     </article>
 
-    <div class="news-link news-link-forward pull-left">
-        <a href="{{ asset('uploads/2010-11-15_Regulamin.pdf') }}" alt="Regulamin Rzeszowskiego Klubu Karate" target="_blank">Regulamin w wersji pdf <i class="fa fa-file-pdf-o" aria-hidden="true"></i></a>
-    </div>
+    {#<div class="news-link news-link-forward pull-left">#}
+        {#<a href="{{ asset('uploads/2010-11-15_Regulamin.pdf') }}" alt="Regulamin Rzeszowskiego Klubu Karate" target="_blank">Regulamin w wersji pdf <i class="fa fa-file-pdf-o" aria-hidden="true"></i></a>#}
+    {#</div>#}
 
 
 {% endblock %}
