--- a/app/Resources/views/Posts/post.html.twig
+++ b/app/Resources/views/Posts/post.html.twig
@@ -3,7 +3,7 @@
 
 {% block title %} {{ post.title }} {% endblock %}
 
-{% block content %}
+{% block full_width_container %}
     <article class="container-width">
         <div class="news">
             <header>
