--- a/app/Resources/views/Subpages/contact.html.twig
+++ b/app/Resources/views/Subpages/contact.html.twig
@@ -4,7 +4,7 @@
     {{ headerTitle }}
 {% endblock %}
 
-{% block content %}
+{% block full_width_container %}
     <h4 class="header-title border_animation">Znajdziesz nas tutaj <span class="head-line"></span> </h4>
     <div class="map-responsive">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2562.5765344474466!2d22.020355816062033!3d50.03803027942057!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473cfafaaef618e3%3A0x4ff1a3b78be96447!2sLwowska+6%2C+Rzesz%C3%B3w!5e0!3m2!1spl!2spl!4v1479771326116" width="1200" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
