--- a/app/Resources/views/Subpages/instructors.html.twig
+++ b/app/Resources/views/Subpages/instructors.html.twig
@@ -4,7 +4,7 @@
     {{ headerTitle }}
 {% endblock %}
 
-{% block content %}
+{% block full_width_container %}
     <div class="header-title border_animation">{{ headerTitle }} <span class="head-line"></span></div>
 
     {% for instructor in instructors %}
