--- a/app/Resources/views/Subpages/regulations.html.twig
+++ b/app/Resources/views/Subpages/regulations.html.twig
@@ -4,7 +4,7 @@
     {{ headerTitle }}
 {% endblock %}
 
-{% block content %}
+{% block full_width_container %}
     <div class="header-title border_animation">Regulamin uczestnika Rzeszowskiego Klubu Karate Kyokushin <span class="head-line"></div>
     <article class="col-xs-12 regulamin">
 
