--- a/app/Resources/views/Subpages/gallery.html.twig
+++ b/app/Resources/views/Subpages/gallery.html.twig
@@ -4,23 +4,44 @@
     {{ headerTitle }}
 {% endblock %}
 
-{% block content %}
+{% block full_width_container %}
 
-    <h4 class="header-title">Dostępne galerie <span class="head-line"></span></h4>
-    {% for gallery in galleryRepo %}
-    <!-- Rysowanie galerii na stronie -->
-    <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-        <div class="hovereffect">
-            <img class="img-responsive  front-page-image" src="{{ asset('uploads/images/galleries/'~ gallery.coverImagePhoto) }}" alt="Zdjecie tytulowe">
-            <div class="overlay">
-                <h2>{{ gallery.name }}</h2>
-                <p>
-                    <a href="{{ path('karate_gallery_photos', {'slug':gallery.slug}  ) }}">Przejdź do galeri</a>
-                </p>
+    {% if noGallery == true %}
+        <h4 class="header-title">Obecnie nie posiadamy jeszcze utworzonych galerii zdjęć, zapraszamy już wkrótce! <span class="head-line"></span></h4>
+
+        {% block ad_image %}
+            <div class="wytnij">
+                <img src="{{ asset('images/zapisy2.png') }}" class="zapisy_png"/>
             </div>
-        </div>
-    </div>
-    {% endfor %}
-    <div class="clear"></div>
+        {% endblock %}
+
+
+
+    {% else %}
+
+        <h4 class="header-title">Dostępne galerie <span class="head-line"></span></h4>
+
+        <main class="gallery-wrapper clearfix">
+        {% for gallery in galleryRepo %}
+        <!-- Rysowanie galerii na stronie -->
+
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                <div class="hovereffect">
+                    <img class="img-responsive  front-page-image" src="{{ asset('uploads/images/galleries/'~ gallery.coverImagePhoto) }}" alt="Zdjecie tytulowe">
+                    <div class="overlay">
+                        <h2>{{ gallery.name }}</h2>
+                        <p>
+                            <a href="{{ path('karate_gallery_photos', {'slug':gallery.slug}  ) }}">Przejdź do galerii</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+        {% endfor %}
+
+        </main>
+
+
+    {% endif %}
 
 {% endblock %}
